--- a/QuanLyNhaSach/QuanLyNhaSach/QuanLyNhaSach.csproj
+++ b/QuanLyNhaSach/QuanLyNhaSach/QuanLyNhaSach.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MaterialSurface" Version="1.1.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
   <ItemGroup>
