--- a/QuanLyNhaSach/QuanLyNhaSach/QuanLyNhaSach.csproj
+++ b/QuanLyNhaSach/QuanLyNhaSach/QuanLyNhaSach.csproj
@@ -18,6 +18,9 @@
     <Compile Update="Forms\TaoPhieuNhap.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Update="Forms\ThamSo.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
